crates/vox-codegen/tests/snapshots/golden_ts_test__golden_ts_emit@form_basic.snap
---
source: crates/vox-codegen/tests/golden_ts_test.rs
expression: combined
---
=== forms.tsx ===
// AUTO-GENERATED by Vox @form emit.
import React from 'react';
import { submit_item } from "./vox-client";

export function Item() {
  const [name, set_name] = React.useState("");
  const [errors, setErrors] = React.useState<Record<string, string>>({});
  const [submitting, setSubmitting] = React.useState(false);
  const [bannerError, setBannerError] = React.useState<string | null>(null);
  function validate(): Record<string, string> {
    const e: Record<string, string> = {};
    if (name === undefined || name === null || name === "") e.name = "name is required";
    return e;
  }
  const onSubmit = async (ev: React.FormEvent) => {
    ev.preventDefault();
    const errs = validate();
    setErrors(errs);
    if (Object.keys(errs).length > 0) return;
    setSubmitting(true);
    setBannerError(null);
    try {
      await submit_item({ name });
    } catch (err) {
      setBannerError(String(err));
    } finally {
      setSubmitting(false);
    }
  };
  return (
    <form onSubmit={onSubmit} className="vox-form">
      {bannerError && <div role="alert" className="vox-form-error-banner">{bannerError}</div>}
      <label className="vox-form-field">
        <span>name *</span>
        <input type="text" value={name ?? ""} onChange={e => set_name(e.target.value)} aria-invalid={!!errors.name} aria-describedby="name-error" />
        {errors.name && <span id="name-error" role="alert" className="vox-form-error">{errors.name}</span>}
      </label>
      <button type="submit" disabled={submitting}>{submitting ? "Saving…" : "Submit"}</button>
    </form>
  );
}


=== vox-app-contract.json ===
{
  "schema_version": 2,
  "http_routes": [],
  "server_fns": [],
  "query_fns": [],
  "mutation_fns": [
    {
      "name": "submit_item",
      "route_path": "/api/mutation/submit_item",
      "signature": "fn(name: str) -> int",
      "wraps_db_transaction": false
    }
  ],
  "stream_fns": [],
  "mcp_tools": [],
  "mcp_resources": [],
  "server_config": {
    "bind_host": "127.0.0.1",
    "default_port": 3000,
    "port_env_var": "VOX_PORT",
    "dev_proxy_env_var": "VOX_SSR_DEV_URL",
    "static_assets_embed_dir": "public/"
  }
}

=== vox-tanstack-query.tsx ===
/**
 * TanStack Query helpers — generated by Vox (`vox-compiler`).
 * Wrap async data (e.g. `vox-client` / `fetch`) with `useVoxServerQuery`.
 */
import { QueryClient, QueryClientProvider, useQuery } from "@tanstack/react-query";
import type { ReactElement, ReactNode } from "react";

export const voxQueryClient = new QueryClient({
  defaultOptions: {
    queries: { staleTime: 30_000 },
  },
});

export function VoxQueryProvider({
  children,
}: Readonly<{ children: ReactNode }>): ReactElement {
  return <QueryClientProvider client={voxQueryClient}>{children}</QueryClientProvider>;
}

/** Narrow mapping: stable `queryKey` + promise `queryFn` (pairs with generated server fns). */
export function useVoxServerQuery<TData>(
  queryKey: readonly unknown[],
  queryFn: () => Promise<TData>,
) {
  return useQuery<TData>({ queryKey, queryFn });
}


=== vox-client.ts ===
// Generated by Vox — typed fetch client for @query / @mutation / @server
// Transport: GET + JSON query values for @query; POST + JSON body for @mutation / @server.
// Do not edit; regenerate with `vox build`.

import { z } from "zod";
/** Wire-format v1 error body when the server returns SSOT §6 JSON (`ok` is always false). */
export type VoxWireError = {
  ok: false;
  code: string;
  message: string;
  request_id?: string;
  details?: unknown;
};

const VoxErrorEnvelopeSchema = z.object({
  ok: z.literal(false),
  code: z.string(),
  message: z.string(),
  request_id: z.string().optional(),
  details: z.unknown().optional(),
});

function parseVoxWireError(text: string): VoxWireError | undefined {
  const s = text.trim();
  if (!s.startsWith("{")) return undefined;
  try {
    const j: unknown = JSON.parse(s);
    const p = VoxErrorEnvelopeSchema.safeParse(j);
    return p.success ? (p.data as VoxWireError) : undefined;
  } catch {
    return undefined;
  }
}

export class VoxApiError extends Error {
  constructor(
    public readonly status: number,
    public readonly path: string,
    /** Raw response body (often JSON text). */
    public readonly responseText: string,
    /** Parsed §6 envelope when the body matches `VoxWireError`. */
    public readonly wireError?: VoxWireError,
  ) {
    const detail =
      wireError !== undefined
        ? `${wireError.code}: ${wireError.message}`
        : responseText
          ? responseText.slice(0, 280)
          : "";
    super(detail ? `${path} failed: ${status} — ${detail}` : `${path} failed: ${status}`);
    this.name = "VoxApiError";
  }
}

let __voxApiBaseRuntime: string | undefined;

/** Override the API base URL at runtime (e.g. after reading a host-injected config). Precedence: this value, then `import.meta.env.VITE_API_URL`, then relative paths. */
export function configureVoxApiBase(base: string | undefined): void {
  __voxApiBaseRuntime = base;
}

function voxApiBase(): string {
  if (__voxApiBaseRuntime !== undefined) return __voxApiBaseRuntime;
  return ((import.meta as unknown as { env?: { VITE_API_URL?: string } }).env?.VITE_API_URL ?? "");
}

/** Build `?a=<json>&b=<json>` with keys sorted lexicographically (matches Axum BTreeMap decode). */
function voxQueryString(query: Record<string, unknown>): string {
  const keys = Object.keys(query).sort();
  if (keys.length === 0) return "";
  const parts = keys.map(
    (k) => `${encodeURIComponent(k)}=${encodeURIComponent(JSON.stringify(query[k]))}`,
  );
  return `?${parts.join("&")}`;
}

async function $get<T>(path: string, schema?: { parse: (x: any) => T }, query?: Record<string, unknown>, init?: RequestInit): Promise<T> {
  const base = voxApiBase();
  const url = base ? `${base}${path}` : path;
  const qs = query && Object.keys(query).length > 0 ? voxQueryString(query) : "";
  const r = await fetch(`${url}${qs}`, { method: "GET", ...init });
  if (!r.ok) {
    const t = await r.text().catch(() => "");
    throw new VoxApiError(r.status, path, t, parseVoxWireError(t));
  }
  const data = await r.json();
  return schema ? schema.parse(data) : (data as T);
}

async function $post<T>(path: string, schema?: { parse: (x: any) => T }, body?: unknown, init?: RequestInit): Promise<T> {
  const base = voxApiBase();
  const url = base ? `${base}${path}` : path;
  const r = await fetch(url, {
    method: "POST",
    headers: { "Content-Type": "application/json" },
    body: JSON.stringify(body ?? {}),
    ...init,
  });
  if (!r.ok) {
    const t = await r.text().catch(() => "");
    throw new VoxApiError(r.status, path, t, parseVoxWireError(t));
  }
  const data = await r.json();
  return schema ? schema.parse(data) : (data as T);
}

function isTauri(): boolean {
  return typeof window !== "undefined" && typeof (window as any).__TAURI_INVOKE__ !== "undefined";
}

async function $tauri<T>(cmd: string, args: Record<string, unknown>, schema?: { parse: (x: any) => T }): Promise<T> {
  try {
    // @ts-ignore
    const data = await (window as any).__TAURI_INVOKE__(cmd, { request: args });
    return schema ? schema.parse(data) : (data as T);
  } catch (e: any) {
    throw new VoxApiError(500, cmd, e.toString(), undefined);
  }
}

/** Server fn `submit_item` → `/api/mutation/submit_item` (POST) */
export async function submit_item(args: { name: string }, init?: RequestInit): Promise<number> {
  if (isTauri()) return $tauri<number>("submit_item", { name: args.name }, z.number());
  return $post<number>("/api/mutation/submit_item", z.number(), { name: args.name }, init);
}



=== openapi.json ===
{
  "components": {
    "schemas": {
      "ErrorEnvelope": {
        "description": "Wire-format v1 error body (SSOT §6). Returned for 4xx/5xx endpoint failures.",
        "properties": {
          "code": {
            "description": "Stable SCREAMING_SNAKE_CASE machine code",
            "type": "string"
          },
          "details": {
            "description": "Optional structured payload; shape is code-specific"
          },
          "message": {
            "type": "string"
          },
          "ok": {
            "const": false,
            "type": "boolean"
          },
          "request_id": {
            "description": "Optional trace / request correlation id",
            "type": "string"
          }
        },
        "required": [
          "ok",
          "code",
          "message"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "description": "Generated from Vox source. Conforms to wire-format-v1.\n\nQuery (`GET`) parameters: each query value is JSON text after URI decoding — see wire-format-v1 SSOT §2.1. The `schema` on each parameter describes the logical type after `JSON.parse`; it is not the raw query-string token shape.",
    "title": "vox-app",
    "version": "0.1.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/mutation/submit_item": {
      "post": {
        "operationId": "submit_item",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "name": {
                    "type": "string"
                  }
                },
                "required": [
                  "name"
                ],
                "type": "object"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "number"
                }
              }
            },
            "description": "Success"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            },
            "description": "Bad request or malformed parameters"
          },
          "429": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            },
            "description": "Rate limited"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            },
            "description": "Internal server error"
          },
          "default": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            },
            "description": "Error — see wire-format-v1 §6"
          }
        },
        "summary": "POST /api/mutation/submit_item"
      }
    }
  },
  "servers": [
    {
      "url": ""
    }
  ]
}
